--- a/apps/data-x/src/styles/globals.css
+++ b/apps/data-x/src/styles/globals.css
@@ -2,59 +2,72 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 
-    /* Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
-  
-    .no-scrollbar {
-      -ms-overflow-style: none;
-      /* IE and Edge */
-      scrollbar-width: none;
-      /* Firefox */
-    }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
   }
-  html,
+}
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, "IBM Plex Sans Arabic", BlinkMacSystemFont,
+    Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+    Helvetica Neue, sans-serif;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
   body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, 'IBM Plex Sans Arabic', BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu,
-      Cantarell,
-      Fira Sans,
-      Droid Sans,
-      Helvetica Neue,
-      sans-serif;
-      -ms-overflow-style: none;
-      /* IE and Edge */
-      scrollbar-width: none;
-      /* Firefox */
-    }
-    
-    html::-webkit-scrollbar {
-      display: none;
+    color: white;
+    background: black;
   }
-  
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  * {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-  }
-  
-  @media (prefers-color-scheme: dark) {
-    html {
-      color-scheme: dark;
-    }
-    body {
-      color: white;
-      background: black;
-    }
-  }
-  
+}
+
+li {
+  list-style: disc;
+  margin-left: 1rem;
+}
+
+ul > li {
+  list-style: disc;
+  margin-left: 1rem;
+}
+
+ul > li > ul > li {
+  list-style: disc;
+  margin-left: 2rem;
+}
+
+ul > li > ul > li > ul > li {
+  list-style: disc;
+  margin-left: 3rem;
+}
