--- a/apps/sard/src/styles/globals.css
+++ b/apps/sard/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+  
+  html,
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, "IBM Plex Sans Arabic", BlinkMacSystemFont,
+      Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
+      Helvetica Neue, sans-serif;
+  }
+  
